fix configuration to be mine

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -10,7 +10,7 @@ defaultContentLanguage: en
 #
 # NB: Final title of shareable pages will be this plus the
 #     title of the page. Eg. "Contacts - Ed."
-title: Ed.
+title: Elektrokiłka.
 
 enableRobotsTXT: true
 
