--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,22 +6,22 @@ description: >-
 # SEO keywords. Used in 'meta name="keywords"' tag.
 # May be overridden by .Keywords or .Tags in front matter.
 keywords:
-  - hugo
-  - ed
-  - hugo theme
-  - minimal
-  - responsive
-  - clean
+  - purescript
+  - elm
+  - lisp
+  - haskell
+  - java
+
 
 # A "copyright"-line to be added to RSS/Atom files.
 # "&copy;" and "{year}" will be replaced by © and the current year.
-copyright: 'Copyright &copy; 2019-{year} Serghei Iakovlev'
+copyright: 'Copyright &copy; 2009-{year} Anton Kotenko'
 
 # Colour scheme. Options: red, orange, magenta, cyan, blue, brown
 colorScheme: ''
 
 # Used in site header
-tagline: a Hugo theme for minimal editions
+tagline: no word about onion
 
 # Custom footer text on left sidebar. Use HTMl if needed.
 # "&copy;" and "{year}" will be replaced by © and the current year.
@@ -81,7 +81,7 @@ assets:
 seo:
   # Will be used in schema.org/Organization.
   # The site.Title  will be used if empty.
-  publisher: Serghei Iakovlev
+  publisher: Anton Kotenko
 
   # To anonymize the IP addresses of hits sent to Google Analytics
   # set this param to true. Please note, to enable Google Analytics
@@ -89,11 +89,11 @@ seo:
   anonymizeIp: true
 
 author:
-  name: Serghei Iakovlev
-  email: egrep@protonmail.ch
-  github: sergeyklay
-  twitter: egreps
-  location: 'Wrocław, Poland'
+  name: Anton Kotenko
+  email: shaman.sir@gmail.com
+  github: shamansir
+  twitter: shaman_sir
+  location: 'München, Deutschland'
 
 social:
   # Array of Facebook Page Admin IDs for Domain Insights
@@ -103,7 +103,7 @@ social:
   facebookId: ''
 
   # Twitter username for the website
-  twitter: egreps
+  twitter: shaman_sir
 
 # Configure search engine
 search:
@@ -118,11 +118,11 @@ search:
   languages:
     # - de
     - en
-    - es
+    # - es
     # - fr
     # - it
     # - pt
-    # - ru
+    - ru
 
 comments:
   enable: false
@@ -133,7 +133,7 @@ comments:
   # For more see: https://giscus.app/
   giscus:
     # Required parameters:
-    repo: sergeyklay/gohugo-theme-ed
+    repo: shamansir/homepage-sr
     repoId: R_kgDOHEYacw
     category: General
     categoryId: DIC_kwDOHEYac84Cerse
