replace `.md` files for blog-posts with their original versions

--- a/index.yaml
+++ b/index.yaml
@@ -28,7 +28,7 @@ template:
     enable: true
 
   sidebar:
-    collapsed: false
+    collapsed: true
 
   # If you are hosting on GitLab Pages, you may want to remove this.
   urlStrategy: pretty
