--- a/index.yaml
+++ b/index.yaml
@@ -24,6 +24,10 @@ template:
   uptree:
     enable: true
 
+  base:
+    bodyClass: overflow-y-scroll bg-gray-700 # bg-[#100F0F] # flexoki: bg-bg
+    containerClass: container mx-auto max-w-screen-lg # bg-[#1C1B1A]
+
   breadcrumbs:
     enable: true
 
